--- a/Graphics/index.html
+++ b/Graphics/index.html
@@ -19,5 +19,8 @@
     <script src='js/main.js'></script>
 </head>
 <body>
+        <label><input type='checkbox' id='pointsCheckbox' checked> Рисовать точки</label>
+        <label><input type='checkbox' id='edgesCheckbox' checked> Рисовать ребра</label>
+        <label><input type='checkbox' id='polygonsCheckbox' checked> Рисовать полигоны</label>
 </body>
 </html>
