--- a/Graphics/index.html
+++ b/Graphics/index.html
@@ -14,6 +14,15 @@
     <script src='js/graph3D/Surfaces/bublik.js'></script>
     <script src='js/graph3D/Surfaces/sphere.js'></script>
     <script src='js/graph3D/Surfaces/paraboloid.js'></script>
+    <script src='js/graph3D/Surfaces/hyperbolicParaboloid.js'></script>
+    <script src='js/graph3D/Surfaces/hyperbolicCylinder.js'></script>
+    <script src='js/graph3D/Surfaces/parabolicCylinder.js'></script>
+    <script src='js/graph3D/Surfaces/ellipticCylinder.js'></script>
+    <script src='js/graph3D/Surfaces/singlecavityHyperboloid.js'></script>
+    <script src='js/graph3D/Surfaces/doublecavityHyperboloid.js'></script>
+    <script src='js/graph3D/Surfaces/ellipsoid.js'></script>
+    <script src='js/graph3D/Surfaces/cone.js'></script>
+    <script src='js/graph3D/Surfaces/ellipticParaboloid.js'></script>
     
     <script src='js/graph3D/Math3D.js'></script>
     <script src='js/graph3D/Graph3D.js'></script>
@@ -26,8 +35,8 @@
         <canvas id='canvas'></canvas>
     </div>
     <div>
-        <label><input type='checkbox' id='pointsCheckbox' checked> Рисовать точки</label>
-        <label><input type='checkbox' id='edgesCheckbox' checked> Рисовать ребра</label>
+        <label><input type='checkbox' id='pointsCheckbox' > Рисовать точки</label>
+        <label><input type='checkbox' id='edgesCheckbox' > Рисовать ребра</label>
         <label><input type='checkbox' id='polygonsCheckbox' checked> Рисовать полигоны</label>
     </div>
 </body>
