feature: add workflow file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html lang="ru">
 <head>
     <title>Графики 3D</title>
     <meta charset="utf-8" />
@@ -23,7 +24,7 @@
     <script type="module" src='js/graph3D/Surfaces/ellipsoid.js'></script>
     <script type="module" src='js/graph3D/Surfaces/cone.js'></script>
     <script type="module" src='js/graph3D/Surfaces/ellipticParaboloid.js'></script>
-    
+
     <script type="module" src='js/graph3D/Math3D.js'></script>
     <script type="module" src='js/graph3D/Graph3D.js'></script>
     <script type="module" src='js/graph/Canvas.js'></script>
