feature: add types to Canvas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <script type="module" src='js/graph3D/Math3D.js'></script>
     <script type="module" src='js/graph3D/Graph3D.js'></script>
-    <script type="module" src='js/graph/Canvas.js'></script>
+    <script type="module" src='js/graph/Canvas.ts'></script>
     <script type="module" src="js/UI/UI.js"></script>
     <script type="module" src='js/main.ts'></script>
 </head>
