feature: add types to Graph3D and Math3D

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script type="module" src='js/graph3D/Surfaces/cone.ts'></script>
     <script type="module" src='js/graph3D/Surfaces/ellipticParaboloid.ts'></script>
 
-    <script type="module" src='js/graph3D/Math3D.js'></script>
-    <script type="module" src='js/graph3D/Graph3D.js'></script>
+    <script type="module" src='js/graph3D/Math3D.ts'></script>
+    <script type="module" src='js/graph3D/Graph3D.ts'></script>
     <script type="module" src='js/graph/Canvas.ts'></script>
     <script type="module" src="js/UI/UI.js"></script>
     <script type="module" src='js/main.ts'></script>
