feature: add types to UI

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script type="module" src='js/graph3D/Math3D.ts'></script>
     <script type="module" src='js/graph3D/Graph3D.ts'></script>
     <script type="module" src='js/graph/Canvas.ts'></script>
-    <script type="module" src="js/UI/UI.js"></script>
+    <script type="module" src="js/UI/UI.ts"></script>
     <script type="module" src='js/main.ts'></script>
 </head>
 <body>
